ピリオドを含むファイル名で @file_show のURLパターンにマッチしないバグを修正

--- a/apps/pc_frontend/config/routing.yml
+++ b/apps/pc_frontend/config/routing.yml
@@ -1,4 +1,5 @@
 file_show:
   class: sfRequestRoute
-  url: /f/show/:directory/:filename.:sf_format
+  url: /f/show/:directory/:filename
   params: { module: f, action: show }
+  options: { segment_separators: ['/'] }
