--- a/config/side_banner_gadget.yml
+++ b/config/side_banner_gadget.yml
@@ -1,38 +1,7 @@
-dropboxBox:
+fMenu:
   caption:
-    ja_JP: "Dropboxファイル一覧"
+    ja_JP: "FileUploadメニュー"
   description:
-    ja_JP: "Dropboxのファイル一覧を表示します"
-  component: [dropbox, dropboxBox]
-  config:
-    num:
-      Name:       "num"
-      Caption:    "表示件数"
-      FormType:   "select"
-      ValueType:  "int"
-      IsRequired: true
-      Default:    10
-      Choices:    {1: 5, 2: 10, 3: 15, 4: 20, 5: 25, 6: 30}
-fBox:
-  caption:
-    ja_JP: "ファイル一覧"
-  description:
-    ja_JP: "ファイル一覧を表示します"
-  component: [f, fBox]
-  config:
-    num:
-      Name:       "num"
-      Caption:    "表示件数"
-      FormType:   "select"
-      ValueType:  "int"
-      IsRequired: true
-      Default:    10
-      Choices:    {1: 5, 2: 10, 3: 15, 4: 20, 5: 25, 6: 30}
-
-dropboxMenu:
-  caption:
-    ja_JP: "Dropboxメニュー"
-  description:
-    ja_JP: "ナビゲーションにDropboxメニューを追加します"
-  component: [dropbox, dropboxMenu]
+    ja_JP: "ナビゲーションにFileUploadメニューを追加します"
+  component: [f, fMenu]
 
