ファイル名に使用不可である文字が含まれている場合に「-」に置換する処理を追加

--- a/apps/pc_frontend/config/routing.yml
+++ b/apps/pc_frontend/config/routing.yml
@@ -1,5 +1,5 @@
 file_show:
   class: sfRequestRoute
-  url: /f/show/:directory/:filename
+  url: /f/show/:filename
   params: { module: f, action: show }
   options: { segment_separators: ['/'] }
