--- a/package.xml
+++ b/package.xml
@@ -17,11 +17,11 @@ OpePNE3.8.2以上に対応しています。</description>
   <email />
   <active>yes</active>
  </lead>
- <date>2014-08-18</date>
- <time>16:10:31</time>
+ <date>2016-12-08</date>
+ <time>12:14:08</time>
  <version>
-  <release>0.9.0</release>
-  <api>0.9.0</api>
+  <release>0.9.1</release>
+  <api>0.9.1</api>
  </version>
  <stability>
   <release>alpha</release>
@@ -29,14 +29,14 @@ OpePNE3.8.2以上に対応しています。</description>
  </stability>
  <license>Apache</license>
  <notes>
-version 0.9.0 alpha release.
+version 0.9.1 alpha release.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
-   <file baseinstalldir="/" md5sum="773bae65895df76ef0937b684512ae53" name="apps/api/modules/f/actions/actions.class.php" role="data" />
+   <file baseinstalldir="/" md5sum="a8ca4e9edd265f124fc7f16f90ced836" name="apps/api/modules/f/actions/actions.class.php" role="data" />
    <file baseinstalldir="/" md5sum="ce407ff5715c837d02b1aba7975bf512" name="apps/api/modules/f/templates/arraySuccess.php" role="data" />
    <file baseinstalldir="/" md5sum="221c58a07e5f67c4d9058b921bef16f3" name="apps/pc_frontend/config/routing.yml" role="data" />
-   <file baseinstalldir="/" md5sum="2c4e9bfe58060c39dec7636e35b86c3e" name="apps/pc_frontend/modules/f/actions/actions.class.php" role="data" />
+   <file baseinstalldir="/" md5sum="b4d08bbdb4f254f1ed8ba900513369af" name="apps/pc_frontend/modules/f/actions/actions.class.php" role="data" />
    <file baseinstalldir="/" md5sum="ac737e87e0b71ff92d24c05cdaf34aac" name="apps/pc_frontend/modules/f/actions/components.class.php" role="data" />
    <file baseinstalldir="/" md5sum="23a85a877ba78a09b520b19d03c3650c" name="apps/pc_frontend/modules/f/config/security.yml" role="data" />
    <file baseinstalldir="/" md5sum="83c353664c92f5196ccb63faaa00db1d" name="apps/pc_frontend/modules/f/templates/_fMenu.php" role="data" />
@@ -47,7 +47,7 @@ version 0.9.0 alpha release.
    <file baseinstalldir="/" md5sum="94466a640d5b6830cd9724d071a8e9bf" name="web/js/jquery.upload.js" role="data" />
    <file baseinstalldir="/" md5sum="617856c3fb2b7177fe7fffa8a1ddd1a1" name="dependencies.yml.sample" role="data" />
    <file baseinstalldir="/" md5sum="3b83ef96387f14655fc854ddc3c6bd57" name="LICENSE" role="data" />
-   <file baseinstalldir="/" md5sum="1301541ca9322ac192299af5c5e8a2c1" name="README.md" role="data" />
+   <file baseinstalldir="/" md5sum="20214dc8af0b621fed056438bfbaf9c0" name="README.md" role="data" />
   </dir>
  </contents>
  <dependencies>
@@ -75,6 +75,21 @@ version 0.9.0 alpha release.
    <license>Apache</license>
    <notes>
 version 0.9.0 alpha release.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.9.1</release>
+    <api>0.9.1</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2016-12-08</date>
+   <license>Apache</license>
+   <notes>
+version 0.9.1 alpha release.
    </notes>
   </release>
  </changelog>
